--- a/webapp/view/Detail.view.xml
+++ b/webapp/view/Detail.view.xml
@@ -20,12 +20,12 @@
           <expandedContent>
           <layout:HorizontalLayout>
             <m:Text class="sapUiTinyMarginBegin  sapUiTinyMarginTop" text="{i18n>headerStatusLabel}:"/>
-            <m:ObjectStatus class="sapUiTinyMarginBegin sapUiTinyMarginTop" text="{StatusDescr}" state="{path:'Jobstatus', formatter:'.formatter.status'}"  icon="{path:'Jobstatus', formatter:'.formatter.icon'}"/>
+            <m:ObjectStatus class="sapUiTinyMarginBegin sapUiTinyMarginTop" text="{StatusDescr}" state="{path:'Jobstatus', formatter:'.formatter.status'}"  icon="{path:'Jobstatus', formatter:'.formatter.iconStatus'}"/>
           </layout:HorizontalLayout>
           </expandedContent>
           <snappedContent>
             <m:Text class="sapUiTinyMarginBegin  sapUiTinyMarginTop" text="{i18n>headerStatusLabel}:"/>
-            <m:ObjectStatus class="sapUiTinyMarginBegin sapUiTinyMarginTop" text="{StatusDescr}" state="{path:'Jobstatus', formatter:'.formatter.status'}"  icon="{path:'Jobstatus', formatter:'.formatter.icon'}"/> 
+            <m:ObjectStatus class="sapUiTinyMarginBegin sapUiTinyMarginTop" text="{StatusDescr}" state="{path:'Jobstatus', formatter:'.formatter.status'}"  icon="{path:'Jobstatus', formatter:'.formatter.iconStatus'}"/> 
           </snappedContent>
         </ObjectPageDynamicHeaderTitle>
       </headerTitle>
@@ -61,10 +61,12 @@
         <ObjectPageSection titleUppercase="false" title="{i18n>tabObjectsList}">
           <subSections>
             <ObjectPageSubSection>
-            <ui:TreeTable id="idItemsList" selectionMode="MultiToggle"  enableColumnReordering="false" 
+        <m:FlexBox>
+           <ui:TreeTable id="idItemsList2"  selectionMode="MultiToggle"  enableColumnReordering="false" 
                           enableSelectAll="true" busyIndicatorDelay="{detailView>/itemsDelay}" showNoData = "true"
                            busy="{detailView>/itemsBusy}" enableBusyIndicator="true" ariaLabelledBy="title" 
-                           showColumnVisibilityMenu="true"  threshold="30" visibleRowCount="30"
+                           showColumnVisibilityMenu="true"  threshold="30" visibleRowCount="30" class="sapUiNoContentPadding" 
+                           width="1200px" 
                                       rows="{
                                         path: 'ObjectSet',
                                          parameters: {
@@ -73,20 +75,15 @@
                                                              treeAnnotationProperties: 
                                                                     {
                                                                     hierarchyLevelFor: 'PosHierarchy',
-                                                                    hierarchyNodeFor: 'PosFioID',
-                                                                    hierarchyParentNodeFor: 'PosFioParent',
+                                                                    hierarchyNodeFor: 'PosId',
+                                                                    hierarchyParentNodeFor: 'PosRelParent',
                                                                     hierarchyDrillStateFor: 'PosDrill'
                                                           }
                                                       } 
                                                   }" >  
 
-             <!-- <ui:Table id="idItemsList" selectionMode="MultiToggle" enableSelectAll="true" busyIndicatorDelay="{detailView>/itemsDelay}" rows="{path: 'ObjectSet',
-                            events: {change: '.onChange'} }" threshold="15" visibleRowCount="15"
-                     showNoData = "true" busy="{detailView>/itemsBusy}" enableBusyIndicator="true" ariaLabelledBy="title" showColumnVisibilityMenu="true">-->
-
-                <ui:extension>
-                  <m:OverflowToolbar height="2.5em">
-                  <!--  <m:Title id="lineItemsTitle" text="{detailView>/itemsTitle}" titleStyle="H2" level="H2"/>-->
+                 <ui:extension>
+                  <m:OverflowToolbar height="2.5em">       
                     <m:ToolbarSpacer />
                     <m:Button id="idSelBtn" tooltip="{i18n>itemsSelOutputBtn}" icon="sap-icon://multiselect-all" type="Ghost" press="onSelectPress" enabled="{detailView>/editMode}"/>
                     <m:Button id="idDeselBtn" tooltip="{i18n>itemsDeselOutputBtn}" icon="sap-icon://multiselect-none" type="Ghost" press="onDeselectPress" enabled="{detailView>/editMode}" />
@@ -97,38 +94,75 @@
                 </ui:extension>
 
                 <ui:columns >
-                  <ui:Column sortProperty="Objkey" filterProperty="Objkey" autoResizable="true" width="18%">
+                  <ui:Column sortProperty="Objkey" filterProperty="Objkey" autoResizable="true" width="35%">
                     <m:Label text="{i18n>itemsDocumentKeyLabel}" />
                     <ui:template>
-                      <m:Text text="{Objkey}" wrapping="false" />
-                    </ui:template>
+                       <!-- <m:Text text="{Objkey}" wrapping="false" />  -->
+                       <m:ObjectStatus text="{Objkey}"   icon="{path:'IconName', formatter:'.formatter.iconObject'}"/>           
+                         </ui:template>
                   </ui:Column>
                   
-                  <ui:Column sortProperty="OutputFlag" hAlign="Center" width="5%">
+                  <ui:Column sortProperty="OutputFlag" hAlign="Center" width="5%" >
                     <m:Label text="{i18n>itemsOutputLabel}" />
                     <ui:template>
-                      <m:CheckBox name="OutputFlag" selected="{OutputFlag}" editable="{detailView>/editMode}"   />
+                      <m:CheckBox name="OutputFlag" selected="{OutputFlag}" editable="{detailView>/editMode}"  />
                     </ui:template>
                   </ui:Column>
 
-                  <ui:Column autoResizable="true"  width="10%" >
+                  <ui:Column autoResizable="true" width="20%"   >
                     <m:Label text="{i18n>itemsStatusLabel}" />
                     <ui:template>
                       <m:Text text="{StatusDescr}" wrapping="false" />
                     </ui:template>
                   </ui:Column>
 
-
-                  <ui:Column autoResizable="true" width="68%" >
+                  <ui:Column autoResizable="true"  width="20%"  >
                     <m:Label text="{i18n>itemsDocumentDescrLabel}" />
                     <ui:template>
                       <m:Text text="{ObjDescr}" wrapping="false" />
                     </ui:template>
                   </ui:Column>
 
+                  <ui:Column autoResizable="true"  width="10%"  >
+                    <m:Label text="{i18n>itemsNoPrintDataLabel}" />
+                    <ui:template>
+                      <m:Text text="{NoPrintData}" wrapping="false" />
+                    </ui:template>
+                  </ui:Column>
+
+                  <ui:Column autoResizable="true"  width="10%" >
+                    <m:Label text="{i18n>itemsNoPrintSelLabel}" />
+                    <ui:template>
+                      <m:Text text="{NoPrintSel}" wrapping="false" />
+                    </ui:template>
+                  </ui:Column>
+
+
                </ui:columns>
              </ui:TreeTable> 
-              
+              <ui:Table id="idItemsList1" selectionMode="MultiToggle" width="600px"  enableSelectAll="true" busyIndicatorDelay="{detailView>/itemsDelay}" 
+                           rows="{path: 'ObjectSet',
+                            events: {change: '.onChange'} }" threshold="30" visibleRowCount="30"
+                            showNoData = "true" busy="{detailView>/itemsBusy}" enableBusyIndicator="true" ariaLabelledBy="title" 
+                            showColumnVisibilityMenu="true" class="sapUiSmallMarginBegin"   >
+                             <ui:extension>
+                  <m:OverflowToolbar height="2.5em">       
+                    <m:ToolbarSpacer />  
+                    <m:OverflowToolbarButton tooltip="Settings" icon="sap-icon://action-settings" />
+                  </m:OverflowToolbar>
+                </ui:extension>
+                       <ui:columns >
+                  <ui:Column sortProperty="Objkey" filterProperty="Objkey" autoResizable="true">
+                    <m:Label text="{i18n>itemsDocumentKeyLabel}" />
+                    <ui:template>
+                      <m:Text text="{Objkey}" wrapping="false" />
+                    </ui:template>
+                  </ui:Column>
+                   </ui:columns>
+             </ui:Table> 
+
+              </m:FlexBox>
+
             </ObjectPageSubSection>
           </subSections>
         </ObjectPageSection>
